--- a/styles/style.less
+++ b/styles/style.less
@@ -1,396 +1,5 @@
 @import url(normalize.min.css);
-
-@dark: #445161;
-@grey: #f5f5f5;
-
-body {
-	background-color: #fff;
-	font-family: Arial, sans-serif;
-	font-weight: 400;
-}
-
-.content {
-	width: 1280px;
-	margin: 0 auto;
-}
-
-h1 {
-	font-size: 60px;
-}
-
-.btn {
-	background-color: #fff;
-	color: @dark;
-	border: 2px solid transparent;
-	border-radius: 5px;
-	text-align: center;
-	text-transform: capitalize;
-	text-decoration: none;
-	font-weight: 700;
-	&:hover {
-		text-decoration: underline;
-		border-color: darken(@dark, 10%);
-		color: darken(@dark, 10%)
-	}
-	&:active {
-		border-color: lighten(@dark, 30%);
-		color: lighten(@dark, 30%)
-	}
-}
-
-.main-header {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	background-color: @dark;
-	text-align: left;
-	padding: 50px;
-	.head-left {
-		h1 {
-			color: #fff;
-		}
-		ul {
-			margin: 0;
-			list-style-image: url('../img/check-icon.png');
-			li {
-			color:  #fff;
-			font-size: 20px;
-			line-height: 36px;
-			}
-		}
-	}
-	.head-right {
-		align-self: center;
-	}
-}
-
-main {
-	color: @dark;
-	.header {
-		text-align: center;
-		margin-bottom: 30px;
-		span {
-			font-size: 30px;
-			line-height: 36px;
-		}
-	}
-
-	.about {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		text-align: left;
-		padding: 50px;
-		.about-left {
-			span {
-				font-size: 30px;
-				line-height: 36px;
-			}
-			p {
-				width: 650px;
-				color:  #333;
-				font-size: 16px;
-				line-height: 24px;
-			}
-		}
-	}
-
-	.plus {
-		display: flex;
-		flex-direction: column;
-		background-color: @grey;
-		padding: 50px;
-		.bullet-wrap {
-			display: flex;
-			flex-flow: row wrap;
-			details {
-				width: 50%;
-				height: 120px;
-				font-size: 16px;
-				line-height: 16px;
-				padding-right: 30px;
-				box-sizing: border-box;
-				&:hover {
-					cursor: pointer;
-					text-decoration: underline;
-				}
-				summary {
-					display: flex;
-					flex-flow: row nowrap;
-					outline: none;
-					font-size: 20px;
-					line-height: 20px;
-					&::-webkit-details-marker {
-						display: none;
-					}
-					&:before {
-						display: block;
-						background-color: @dark;
-						content: "+";
-						color: #fff;
-						font-size: 30px;
-						line-height: 30px;
-						font-weight: bold;
-						margin: -5px 10px 0 0;
-						padding: 0;
-						text-align: center;
-						width: 30px;
-						height: 30px;
-					}
-				}
-				&[open] summary:before {
-					content: "-";
-					line-height: 0.9em;
-				}
-			}
-		}
-	}
-
-	.scr {
-		display: flex;
-		flex-flow: column;
-		padding: 50px;
-		.scr-wrap {
-			display: flex;
-			flex-flow: row wrap;
-			figure {
-				margin: 0 0 30px 0;
-				padding-right: 20px;
-				width:50%;
-				box-sizing: border-box;
-				display: flex;
-				flex-direction: row;
-				img {
-					margin-right: 15px;
-				}
-				figcaption {
-					width: 360px;
-					span {
-						font-size: 24px;
-						line-height: 30px;
-					}
-					p {
-						font-size: 16px;
-						line-height: 24px;
-					}
-				}
-			}
-		}
-	}
-
-	.reviews {
-		display: flex;
-		flex-flow: column;
-		padding: 50px;
-		background-color: @grey;
-		font-size: 14px;
-		line-height: 18px;
-		.review-wrap {
-			display: flex;
-			flex-flow: row wrap;
-			article {
-				margin: 0 0 30px 0;
-				padding-right: 20px;
-				width:50%;
-				box-sizing: border-box;
-				display: flex;
-				flex-direction: row;
-				img {
-					height: 75px;
-					border-radius: 50%;
-					margin-right: 15px;
-				}
-				.dsc {
-					position: relative;
-					margin-left: 10px;
-					width: 480px;
-					background-color: #ececec;
-					border-radius: 10px;
-					padding: 10px;
-					span {
-						font-style: italic;
-						color: #989898;
-					}
-					p {
-						color: #333;
-						margin-top:0;
-						font-size: 16px;
-						line-height: 24px;
-					}
-					&::after {
-						content: '';
-						position: absolute;
-						left: -25px;
-						top: 24px;
-						border: 12px solid transparent;
-						border-right: 14px solid #ececec;
-					}
-				}
-			}
-		}
-	}
-
-	.buy {
-		padding: 50px;
-		.buy-wrap {
-			display: flex;
-			flex-flow: row nowrap;
-			justify-content: center;
-			align-items: flex-end;
-			.banner {
-				display: flex;
-				flex-flow: column nowrap;
-				align-items: center;
-				padding-top: 16px;
-				background-color: @dark;
-				border: 2px solid @dark;
-				border-radius: 10px;
-				box-sizing: border-box;
-				width: 300px;
-				margin-right: 45px;
-				color:  #fff;
-				&:last-child {
-					margin-right: 0;
-				}
-				span.banner-header {
-					font-size: 24px;
-					line-height: 30px;
-					margin-bottom: 15px;
-				}
-				.price {
-					background-color: #fff;
-					height: 70px;
-					width: 100%;
-					text-align: center;
-					span {
-						color: @dark;
-						font-size: 40px;
-						line-height: 70px;
-					}
-				}
-				li {
-					font-size: 14px;
-					line-height: 24px;
-				}
-				.btn {
-					width: 260px;
-					height: 40px;
-					margin-bottom: 20px;
-					font-size: 18px;
-					line-height: 40px;
-				}
-			}
-		}
-	}
-}
-
-footer {
-	padding: 50px;
-	background-color: @dark;
-	color: #fff;
-	height: 500px;
-	.header {
-		text-align: center;
-		margin-bottom: 30px;
-		span {
-			font-size: 30px;
-			line-height: 36px;
-		}
-	}
-	.contact-wrap {
-		display: flex;
-		flex-flow: row nowrap;
-		.form-wrap {
-			width: 60%;
-			display: flex;
-			justify-content: flex-end;
-			form {
-				width: 500px;
-				display: flex;
-				flex-flow: column nowrap;
-				.form-field {
-					margin-bottom: 20px;
-					height: 40px;
-					outline: none;
-					border: 3px solid transparent;
-					padding-left: 10px;
-					border-radius: 5px;
-					background-color: #fff;
-					&:focus {
-						border: 3px solid darken(@dark, 90%);
-					}
-				}
-				textarea.form-field {
-					height: 170px;
-				}
-				.btn {
-					margin:0 auto;
-					font-size: 16px;
-					line-height: 24px;
-					width: 140px;
-					height: 40px;
-					outline: none;
-				}
-			}
-		}
-		.contacts {
-			padding-left: 45px;
-			display: flex;
-			flex-direction: column;
-			span {
-				display: inline-block;
-				font-size: 16px;
-				line-height: 24px;
-				margin-bottom: 30px;
-				i {
-				font-size: 26px;
-				line-height: 26px;
-				margin-right: 10px;
-				}
-			}
-			.socials {
-				height: 44px;
-				display: flex;
-				flex-flow: row nowrap;
-				.social {
-					width: 45px;
-					margin-right: 10px;
-					background-image: url('../img/social-icons.png');
-					background-repeat: no-repeat;
-					&:hover {
-						cursor: pointer;
-						opacity: 0.5;
-					}
-					&:active {
-						opacity: 0.8;
-					}
-				}
-				.twitter {
-					background-position-x: 0;
-				}
-				.facebook {
-					background-position-x: -49px;
-				}
-				.linkedin {
-					background-position-x: -98px;
-				}
-				.googleplus {
-					background-position-x: -148px;
-				}
-				.youtube {
-					background-position-x: -197px;
-				}
-			}
-		}
-	}
-}
-
-.copyright {
-	height: 26px;
-	background-color: #fff;
-	color: @dark;
-	font-size: 12px;
-	letter-spacing: 0.3px;
-	line-height: 26px;
-	text-align: center;
-}
+@import url(global.less);
+@import url(header.less);
+@import url(main.less);
+@import url(footer.less);
