Added video and audion bgr

--- a/styles/global.less
+++ b/styles/global.less
@@ -7,6 +7,23 @@ body {
 	font-weight: 400;
 }
 
+#bgr {
+	position: fixed;
+	z-index: -1;
+	width: 100%;
+	top: 0;
+	left: 0;
+}
+
+#mute {
+	position:fixed;
+	right: 0;
+	top: 0;
+	height: 70px;
+	width: 70px;
+	font-size: 40px;
+}
+
 .content {
 	width: 1280px;
 	margin: 0 auto;
