--- a/styles/main.less
+++ b/styles/main.less
@@ -27,6 +27,13 @@ main {
 				line-height: 24px;
 			}
 		}
+		video {
+			width: 430px;
+			height: 245px;
+			&:hover {
+				cursor: pointer;
+			}
+		}
 	}
 
 	.plus {
